<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_degrade"
    android:padding="34dp"
    tools:context=".ui.login.LoginActivity">

    <LinearLayout
        android:id="@+id/login_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp"
        android:background="@drawable/card_redondeada"
        android:elevation="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tvTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ra_ces_inmobiliaria"
            android:textColor="#1B5E20"
            android:textSize="28sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="8dp"/>

        <TextView
            android:id="@+id/tvLoginSubtitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accede_a_tu_cuenta"
            android:textColor="#666666"
            android:textSize="14sp"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="24dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:boxBackgroundColor="@android:color/white"
            app:boxStrokeColor="@color/verde_oscuro"
            app:hintTextColor="@color/verde_oscuro">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            app:endIconMode="password_toggle"
            app:boxBackgroundColor="@android:color/white"
            app:boxStrokeColor="@color/verde_oscuro"
            app:hintTextColor="@color/verde_oscuro">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etContrasenia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contrasenia"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ingresar"
            android:textColor="#FFFFFF"
            app:backgroundTint="@color/verde"
            app:cornerRadius="12dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/tvResetear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/olvid_mi_contrase_a"
            android:textColor="@color/verde"
            app:backgroundTint="@color/white"
            android:textSize="14sp"
            android:paddingTop="12dp"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

