<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_inicio">

    <fragment
        android:id="@+id/nav_inicio"
        android:name="com.giulietta.inmobiliaria.ui.inicio.InicioFragment"
        android:label="@string/inicio"
        tools:layout="@layout/fragment_inicio" />

    <fragment
        android:id="@+id/nav_perfil"
        android:name="com.giulietta.inmobiliaria.ui.perfil.PerfilFragment"
        android:label="@string/perfil"
        tools:layout="@layout/fragment_perfil" >
        <action
            android:id="@+id/action_nav_perfil_to_cambiarPasswordFragment"
            app:destination="@id/cambiarPasswordFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_inmuebles"
        android:name="com.giulietta.inmobiliaria.ui.inmuebles.InmueblesFragment"
        android:label="@string/inmuebles"
        tools:layout="@layout/fragment_inmuebles" >
        <action
            android:id="@+id/action_nav_inmuebles_to_detalleInmuebleFragment"
            app:destination="@id/detalleInmuebleFragment" />
        <action
            android:id="@+id/action_nav_inmuebles_to_cargarInmuebleFragment"
            app:destination="@id/cargarInmuebleFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_inquilinos"
        android:name="com.giulietta.inmobiliaria.ui.inquilinos.InquilinosFragment"
        android:label="@string/inquilinos"
        tools:layout="@layout/fragment_inquilinos" />
    <fragment
        android:id="@+id/nav_contratos"
        android:name="com.giulietta.inmobiliaria.ui.contratos.ContratosFragment"
        android:label="@string/contratos"
        tools:layout="@layout/fragment_contratos" >
        <action
            android:id="@+id/action_nav_contratos_to_detalleContratoFragment"
            app:destination="@id/detalleContratoFragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_logout"
        android:name="com.giulietta.inmobiliaria.ui.logout.LogoutFragment"
        android:label="Cerrar Sesión"
        tools:layout="@layout/fragment_logout" />
    <fragment
        android:id="@+id/detalleInmuebleFragment"
        android:name="com.giulietta.inmobiliaria.ui.inmuebles.DetalleInmuebleFragment"
        android:label="Detalle inmueble"
        tools:layout="@layout/fragment_detalle_inmueble" >
        <action
            android:id="@+id/action_detalleInmuebleFragment_to_nav_inmuebles"
            app:destination="@id/nav_inmuebles" />
    </fragment>
    <fragment
        android:id="@+id/cargarInmuebleFragment"
        android:name="com.giulietta.inmobiliaria.ui.inmuebles.CargarInmuebleFragment"
        android:label="Cargar Inmueble"
        tools:layout="@layout/fragment_cargar_inmueble" >
        <action
            android:id="@+id/action_cargarInmuebleFragment_to_nav_inmuebles"
            app:destination="@id/nav_inmuebles" />
    </fragment>
    <fragment
        android:id="@+id/cambiarPasswordFragment"
        android:name="com.giulietta.inmobiliaria.ui.perfil.CambiarPasswordFragment"
        android:label="Cambiar Contraseña"
        tools:layout="@layout/fragment_cambiar_password" >
        <action
            android:id="@+id/action_cambiarPasswordFragment_to_nav_perfil"
            app:destination="@id/nav_perfil" />
    </fragment>
    <fragment
        android:id="@+id/detalleContratoFragment"
        android:name="com.giulietta.inmobiliaria.ui.contratos.DetalleContratoFragment"
        android:label="fragment_detalle_contrato"
        tools:layout="@layout/fragment_detalle_contrato" >
        <action
            android:id="@+id/action_detalleContratoFragment_to_nav_contratos"
            app:destination="@id/nav_contratos" />
    </fragment>


</navigation>