<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_degrade"
    android:padding="34dp">

    <!-- Contenedor de la tarjeta -->
    <LinearLayout
        android:id="@+id/perfil_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/card_redondeada"
        android:elevation="4dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Nombre -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:hint="@string/nombre"
            app:boxBackgroundColor="@android:color/white"
            app:boxStrokeColor="@color/verde_oscuro"
            app:hintTextColor="@color/verde_oscuro">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:inputType="textPersonName"
            android:textColor="@color/verde_oscuro"
            android:textSize="14sp"
            android:enabled="false"/>
        </com.google.android.material.textfield.TextInputLayout>
        <!-- Apellido -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:hint="@string/apellido"
            app:boxBackgroundColor="@android:color/white"
            app:boxStrokeColor="@color/verde_oscuro"
            app:hintTextColor="@color/verde_oscuro">
            <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_apellido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:inputType="textPersonName"
            android:textColor="@color/verde_oscuro"
            android:textSize="14sp"
            android:enabled="false"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- DNI -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:hint="@string/dni"
            app:boxBackgroundColor="@android:color/white"
            app:boxStrokeColor="@color/verde_oscuro"
            app:hintTextColor="@color/verde_oscuro">
            <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_dni"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:inputType="number"
            android:textColor="@color/verde_oscuro"
            android:textSize="14sp"
            android:enabled="false"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Email -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:hint="@string/email"
            app:boxBackgroundColor="@android:color/white"
            app:boxStrokeColor="@color/verde_oscuro"
            app:hintTextColor="@color/verde_oscuro">
            <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:enabled="false"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Teléfono -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:hint="@string/tel_fono"
            app:boxBackgroundColor="@android:color/white"
            app:boxStrokeColor="@color/verde_oscuro"
            app:hintTextColor="@color/verde_oscuro">
            <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_telefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:inputType="phone"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:enabled="false"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Botón Editar Perfil -->
        <Button
            android:id="@+id/btn_editarPerfil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/verde"
            android:paddingVertical="12dp"
            android:text="Editar"
            android:textColor="@android:color/white" />
        <Button
            android:id="@+id/btn_cambiarContrasenia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:backgroundTint="@android:color/transparent"
            android:text="Cambiar contraseña"
            android:textColor="@color/verde_oscuro"
            app:strokeColor="@color/verde_oscuro"
            app:strokeWidth="2dp"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>